--- a/chrome/locale/en-US/archview.dtd
+++ b/chrome/locale/en-US/archview.dtd
@@ -2,11 +2,15 @@
 <!ENTITY about.license.label "License">
 <!ENTITY about.credit.label "Credit">
 <!ENTITY about.name.label "ArchView">
-<!ENTITY about.version.label "0.7.1">
+<!ENTITY about.version.label "0.7.2pre">
 <!ENTITY about.author.label "Solar Flare">
 <!ENTITY about.email.label "soflare@gmail.com">
 <!ENTITY about.home.label "http://archview.sourceforge.net/">
-<!ENTITY about.copyright.label "(c) 2007-2008 &about.author.label;">
+<!ENTITY about.copyright.label "© 2007-2008 &about.author.label;">
+<!ENTITY about.developer.label "Infocatcher">
+<!ENTITY about.url2.label "github.com/Infocatcher/ArchView">
+<!ENTITY about.url2 "https://github.com/Infocatcher/ArchView">
+<!ENTITY about.copyright2.label "© 2013 &about.developer.label;">
 <!ENTITY about.banner.label "&about.name.label; - View Archive File Online!">
 <!ENTITY about.details.label "&about.name.label; can show archive files online without download the whole archive. Just like a normal web page. It is very fast since it merely fetches a small portion of the archive file from server. &about.name.label; supports RAR, ZIP and ISO formats; http://, ftp:// and file:// protocols. And it can present XUL or HTML interface.">
 
