--- a/chrome/locale/ru-RU/archview.dtd
+++ b/chrome/locale/ru-RU/archview.dtd
@@ -2,11 +2,15 @@
 <!ENTITY about.license.label "Лицензия">
 <!ENTITY about.credit.label "Авторы">
 <!ENTITY about.name.label "ArchView">
-<!ENTITY about.version.label "0.7.1">
+<!ENTITY about.version.label "0.7.2pre">
 <!ENTITY about.author.label "Solar Flare">
 <!ENTITY about.email.label "soflare@gmail.com">
 <!ENTITY about.home.label "http://archview.sourceforge.net/">
-<!ENTITY about.copyright.label "(c) 2007-2008 &about.author.label;">
+<!ENTITY about.copyright.label "© 2007-2008 &about.author.label;">
+<!ENTITY about.developer.label "Infocatcher">
+<!ENTITY about.url2.label "github.com/Infocatcher/ArchView">
+<!ENTITY about.url2 "https://github.com/Infocatcher/ArchView">
+<!ENTITY about.copyright2.label "© 2013 &about.developer.label;">
 <!ENTITY about.banner.label "&about.name.label; - Просмотр архивов online!">
 <!ENTITY about.details.label "&about.name.label; показывает содержание архивов online без скачивания всего архива. Список файлов выглядит, как обычная веб страница. Быстрая скорость &about.name.label; достигается за счёт скачивания с сервера только маленькой части архива. &about.name.label; поддерживает форматы RAR и ZIP; протоколы http://, ftp:// и file://; вывод через XUL или HTML интерфейс.">
 
