--- a/chrome/locale/ja-JP/archview.dtd
+++ b/chrome/locale/ja-JP/archview.dtd
@@ -2,11 +2,15 @@
 <!ENTITY about.license.label "ライセンス">
 <!ENTITY about.credit.label "クレジット">
 <!ENTITY about.name.label "ArchView">
-<!ENTITY about.version.label "0.7.1">
+<!ENTITY about.version.label "0.7.2pre">
 <!ENTITY about.author.label "Solar Flare">
 <!ENTITY about.email.label "soflare@gmail.com">
 <!ENTITY about.home.label "http://archview.sourceforge.net/">
-<!ENTITY about.copyright.label "(c) 2007-2008 &about.author.label;">
+<!ENTITY about.copyright.label "© 2007-2008 &about.author.label;">
+<!ENTITY about.developer.label "Infocatcher">
+<!ENTITY about.url2.label "github.com/Infocatcher/ArchView">
+<!ENTITY about.url2 "https://github.com/Infocatcher/ArchView">
+<!ENTITY about.copyright2.label "© 2013 &about.developer.label;">
 <!ENTITY about.banner.label "&about.name.label; - Firefoxで直接アーカイブファイルの中身を見える！">
 <!ENTITY about.details.label "&about.name.label; でアーカイブファイルのダウンロードが要らなく、ウエッブページの見る方法と同じでfirefoxでアーカイブファイルの中身を見える。Webサーバより必要な情報だけを取得するので、速度が速い。&about.name.label; はRARとZIPとISO形式のアーカイブファイルをサポートし、http://とftp://とfile://の三つプロトコルをサポートしている。そして、XULとHTMLの二つ画面表示形式を選択できる。">
 
