--- a/chrome/locale/pt-BR/archview.dtd
+++ b/chrome/locale/pt-BR/archview.dtd
@@ -2,11 +2,15 @@
 <!ENTITY about.license.label "Licença">
 <!ENTITY about.credit.label "Crédito">
 <!ENTITY about.name.label "ArchView">
-<!ENTITY about.version.label "0.7.1">
+<!ENTITY about.version.label "0.7.2pre">
 <!ENTITY about.author.label "Solar Flare">
 <!ENTITY about.email.label "soflare@gmail.com">
 <!ENTITY about.home.label "http://archview.sourceforge.net/">
-<!ENTITY about.copyright.label "(c) 2007-2008 &about.author.label;">
+<!ENTITY about.copyright.label "© 2007-2008 &about.author.label;">
+<!ENTITY about.developer.label "Infocatcher">
+<!ENTITY about.url2.label "github.com/Infocatcher/ArchView">
+<!ENTITY about.url2 "https://github.com/Infocatcher/ArchView">
+<!ENTITY about.copyright2.label "© 2013 &about.developer.label;">
 <!ENTITY about.banner.label "&about.name.label; - Visualize Arquivos Compactados Online!">
 <!ENTITY about.details.label "&about.name.label; pode mostrar arquivos compactados online sem precisar baixar. Igual a uma página da web. É muito rápido porque apenas adquire uma pequena porção do arquivo compactado do servidor. &about.name.label; suporta formatos RAR, ZIP e ISO; protocolos http://, ftp:// e file://. E pode apresentar em interface XUL ou HTML.">
 
