--- a/chrome/locale/en-US/archview.dtd
+++ b/chrome/locale/en-US/archview.dtd
@@ -9,7 +9,7 @@
 <!ENTITY about.developer.label "Infocatcher">
 <!ENTITY about.url2.label "github.com/Infocatcher/ArchView">
 <!ENTITY about.url2 "https://github.com/Infocatcher/ArchView">
-<!ENTITY about.copyright2.label "© 2013 &about.developer.label;">
+<!ENTITY about.copyright2.label "© 2013, 2015 &about.developer.label;">
 <!ENTITY about.banner.label "&about.name.label; - View Archive File Online!">
 <!ENTITY about.details.label "&about.name.label; can show archive files online without download the whole archive. Just like a normal web page. It is very fast since it merely fetches a small portion of the archive file from server. &about.name.label; supports RAR, ZIP and ISO formats; http://, ftp:// and file:// protocols. And it can present XUL or HTML interface.">
 
