--- a/chrome/locale/es-ES/archview.dtd
+++ b/chrome/locale/es-ES/archview.dtd
@@ -9,7 +9,7 @@
 <!ENTITY about.developer.label "Infocatcher">
 <!ENTITY about.url2.label "github.com/Infocatcher/ArchView">
 <!ENTITY about.url2 "https://github.com/Infocatcher/ArchView">
-<!ENTITY about.copyright2.label "© 2013 &about.developer.label;">
+<!ENTITY about.copyright2.label "© 2013, 2015 &about.developer.label;">
 <!ENTITY about.banner.label "&about.name.label; - Visor Online de Archivos Compactados!">
 <!ENTITY about.details.label "&about.name.label; puede mostrar la lista de archivos compactados sin tener que bajar el archivo completo. Justo como una página web normal. Es muy rápido puesto que sólo necesita bajar una pequeña parte del archivo compactado del servidor. &about.name.label; soporta formatos RAR, ZIP y ISO; protocolos http://, ftp:// y file://. Puede mostrarse en XUL o en interface HTML.">
 
