--- a/chrome/locale/pt-BR/archview.dtd
+++ b/chrome/locale/pt-BR/archview.dtd
@@ -9,7 +9,7 @@
 <!ENTITY about.developer.label "Infocatcher">
 <!ENTITY about.url2.label "github.com/Infocatcher/ArchView">
 <!ENTITY about.url2 "https://github.com/Infocatcher/ArchView">
-<!ENTITY about.copyright2.label "© 2013 &about.developer.label;">
+<!ENTITY about.copyright2.label "© 2013, 2015 &about.developer.label;">
 <!ENTITY about.banner.label "&about.name.label; - Visualize Arquivos Compactados Online!">
 <!ENTITY about.details.label "&about.name.label; pode mostrar arquivos compactados online sem precisar baixar. Igual a uma página da web. É muito rápido porque apenas adquire uma pequena porção do arquivo compactado do servidor. &about.name.label; suporta formatos RAR, ZIP e ISO; protocolos http://, ftp:// e file://. E pode apresentar em interface XUL ou HTML.">
 
